--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main class="container-fluid">
         <section class="row">     
             <section class=" canchas ">
-                        <img src="./Imagenes/historia cortada.jpg" alt=" Club vicentinos" width="100%">
+                        <img src="./Imagenes/historia cortada.jpg" class="img-fluid" alt=" Club vicentinos" width="100%">
             </section>
         </section>    
                 <!---introducccion hockey y rugby-->
@@ -85,7 +85,7 @@
                 <section class="col-xs-12 col-md-6 col-lg-6 col-xl-6 p-2 border-danger " id="Deporte">
                     <h2> RUGBY</h2> 
                         <aside>
-                            <img src="./Imagenes/rugby.jpg" alt="partido de rugby" width="500" height="350">
+                            <img src="./Imagenes/rugby.jpg" class="img-fluid" alt="partido de rugby" width="500" height="350">
                         </aside>
                     <aside>         
                         <p>
